--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/ALIHASSAN0090/portfolio.git",
+  "author": "Ali Hassan Zahid <162284502+ALIHASSAN0090@users.noreply.github.com>",
+  "license": "MIT"
 }
